-
Bug
-
Resolution: Done
-
Not Evaluated
-
Some future release
-
None
The ContactModel does not clean the previous results when the filter parameters are changed.
The new contacts are appended to the model after the previous ones.
The correct behavior would be to clean the previous contacts and then append new results matching the current filter parameters.
For Gerrit Dashboard: QTBUG-32863 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
62488,3 | Clear contact model before fetch the contacts. | master | qt/qtpim | Status: ABANDONED | 0 | 0 |